--- a/reading data from the web.Rmd
+++ b/reading data from the web.Rmd
@@ -9,22 +9,38 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Extracting tables
+### `rvest` and `httr`
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
+library(tidyverse)
+library(rvest)
+library(httr)
+```
+### import NSDUH data
+http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm
+```{r}
+url = "http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm"
+drug_use_html = read_html(url)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+drug_use_html
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+extracting the tables from the HTML.
+```{r}
+drug_use_html |>
+  html_table()
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+only focused on the first table for now, so get the contents from the first list element.
+
+`first()`: get the first element
+```{r}
+table_marj = 
+  drug_use_html |> 
+  html_table() |> 
+  first() 
+
+table_marj
+```
+
